--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_5">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_marginBottom="@dimen/margin_5">
 
     <ImageView
         android:id="@+id/image"
@@ -113,14 +114,14 @@
         </LinearLayout>
     </RelativeLayout>
 
-
     <RelativeLayout
         android:id="@+id/comment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/likes_and_comments"
         android:background="@color/colorGrayMediumLight"
-        android:visibility="visible">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/comment_author_user_image"
