--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -40,8 +40,6 @@
     <color name="facebook_blue"                             >#3b5998</color>
     <color name="shop_blue"                                 >#0be5ff</color>
     <color name="stats_pink"                                >#ff0b5b</color>
-
-
-
+    <color name="phoneLoungeTickerColor">#C2FF01</color>
 
 </resources>
