--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -6,6 +6,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="48dp"
+    tools:layout_marginBottom="0dp"
     tools:context="base.app.activity.PhoneLoungeActivity">
 
     <android.support.percent.PercentRelativeLayout
@@ -26,18 +28,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
-            android:layout_below="@+id/left_top_bar_container"
             android:background="@color/colorPrimaryMediumLight" >
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/left_top_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_48"
+            android:layout_height="@dimen/height_72"
+            tools:layout_height="@dimen/height_48"
             android:background="@android:color/transparent">
+
             <ImageView
                 android:layout_width="match_parent"
+                android:paddingTop="24dp"
+                tools:paddingTop="0dp"
                 android:layout_height="match_parent"
+                android:alpha="0.85"
                 android:background="@drawable/phone_background"
                 android:tileMode="repeat" />
 
@@ -45,10 +51,12 @@
                 android:id="@+id/logo"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
+                android:layout_marginTop="24dp"
+                tools:layout_marginTop="0dp"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/padding_4"
                 android:scaleType="fitCenter"
-                android:src="?logoIcon" />
+                tools:src="?logoIcon" />
 
             <TextView
                 android:id="@+id/caption"
@@ -86,6 +94,8 @@
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
+                android:layout_marginTop="24dp"
+                tools:layout_marginTop="0dp"
                 android:src="@drawable/notif_icon"
                 android:tint="?phoneLoungeIconsColor"/>
 
@@ -94,6 +104,8 @@
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
+                android:layout_marginTop="24dp"
+                tools:layout_marginTop="0dp"
                 android:layout_below="@+id/left_notification_container"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
@@ -407,7 +419,7 @@
                 android:choiceMode="singleChoice"
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false"
-                android:overScrollFooter="@android:color/transparent"></android.support.v7.widget.RecyclerView>
+                android:overScrollFooter="@android:color/transparent"/>
         </android.support.percent.PercentRelativeLayout>
     </android.support.percent.PercentRelativeLayout>
 </android.support.v4.widget.DrawerLayout>
