--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -41,7 +41,7 @@
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        tools:src="@drawable/image_wall_background"/>
+                        android:src="@drawable/image_wall_background"/>
 
                     <TextView
                         android:id="@+id/top_caption"
