--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -24,25 +24,28 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <RelativeLayout
                     android:id="@+id/wall_top_image_container"
                     android:visibility="gone"
+                    tools:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/wall_top_image"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/image_wall_background"
-                        android:scaleType="centerCrop"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true" />
+                        android:layout_height="240dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/image_wall_background"
+                        android:scaleType="centerCrop"/>
+
                     <RelativeLayout
                         android:id="@+id/wall_top_info_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true">
+                        android:layout_marginTop="100dp"
+                        android:layout_marginBottom="40dp"
+                        android:layout_height="wrap_content">
 
                         <RelativeLayout
                             android:id="@+id/wall_top_info"
@@ -55,12 +58,13 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
+                                android:layout_marginRight="-4dp"
                                 android:paddingEnd="@dimen/padding_2"
                                 android:textColor="@color/white"
                                 android:maxLines="1"
                                 android:maxLength="6"
                                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                                android:textSize="@dimen/font_size_28"
+                                android:textSize="32sp"
                                 android:textStyle="bold" />
 
                             <ImageView
@@ -77,7 +81,7 @@
                                 android:layout_centerVertical="true"
                                 android:layout_toEndOf="@id/wall_team_left_image"
                                 android:padding="@dimen/padding_8"
-                                android:textSize="@dimen/font_size_20"
+                                android:textSize="20sp"
                                 android:text="@string/vs"
                                 android:textColor="@color/white" />
 
@@ -94,11 +98,12 @@
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
                                 android:maxLength="6"
+                                android:layout_marginLeft="-4dp"
                                 android:layout_centerVertical="true"
                                 android:layout_toEndOf="@id/wall_team_right_image"
                                 android:paddingStart="@dimen/padding_2"
                                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                                android:textSize="@dimen/font_size_28"
+                                android:textSize="32sp"
                                 android:padding="@dimen/padding_8"
                                 android:textColor="@color/white"
                                 android:textStyle="bold" />
