--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -202,6 +202,7 @@
     <dimen name="padding_13">13dp</dimen>
     <dimen name="padding_12">12dp</dimen>
     <dimen name="height_70">70dp</dimen>
+    <dimen name="height_72">72dp</dimen>
     <dimen name="width_70">70dp</dimen>
     <dimen name="width_4">4dp</dimen>
     <dimen name="font_size_48">48sp</dimen>
