--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="colorControlActivated">@color/colorAccentSemiDark</item>
         <item name="colorControlHighlight">@color/colorAccentSemiDark</item>
         <item name="colorPrimarySemiLight">@color/colorPrimarySemiLight</item>
-        <item name="android:windowBackground">@color/colorPrimaryMediumLight</item>
+        <item name="android:windowBackground">@color/login_background</item>
 
         <item name="black">@color/black</item>
         <item name="white">@color/white</item>
