--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -67,7 +67,9 @@
                 android:layout_toStartOf="@+id/notification_open"
                 android:textAllCaps="true"
                 android:textColor="?phoneLoungeTeamCaptionColor"
-                android:textSize="14sp"
+                android:textSize="16sp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="-2dp"
                 android:textStyle="bold" />
 
             <TextView
