--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -66,6 +66,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/news_recycler_view"
                     android:layout_width="match_parent"
+                    android:background="@color/login_background"
                     android:layout_height="match_parent"
                     android:layout_below="@id/top_image"
                     android:layout_marginTop="?newsRecyclerListPhoneTopMargin"
