--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -5,12 +5,13 @@
 
         <!--System Colors-->
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimarySemiDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorAccentSemiDark</item>
         <item name="colorControlActivated">@color/colorAccentSemiDark</item>
         <item name="colorControlHighlight">@color/colorAccentSemiDark</item>
         <item name="colorPrimarySemiLight">@color/colorPrimarySemiLight</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/colorPrimarySemiDark</item>
 
         <item name="black">@color/black</item>
         <item name="white">@color/white</item>
@@ -214,11 +215,6 @@
 
     </style>
 
-    <style name="AppTheme.Splash" parent="AppTheme">
-        <item name="android:windowBackground">@color/black</item>
-        <item name="colorPrimaryDark">@color/colorPrimarySemiDark</item>
-    </style>
-
     <style name="fontTitilliumWebLight">
         <item name="fontPath">fonts/TitilliumWeb-Light.ttf</item>
     </style>
@@ -350,8 +346,5 @@
         <item name="fontPath">fonts/TitilliumWeb-Light.ttf</item>
         <item name="android:textSize">@dimen/font_size_28</item>
     </style>
-
-
-
 
 </resources>
