--- a/SportsSideKick/app/src/main/res/layout/wall_native_ad.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_native_ad.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_230"
+    android:foreground="?selectableItemBackground"
     android:orientation="vertical">
 
     <com.facebook.ads.MediaView
