large body text in detail view

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -264,7 +264,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/source"
                     android:layout_marginEnd="@dimen/margin_5"
-                    android:lineSpacingMultiplier="0.85"
+                    android:lineSpacingMultiplier="0.7"
                     android:layout_marginStart="@dimen/margin_15"
                     android:layout_marginTop="@dimen/margin_5"
                     android:ellipsize="end"
@@ -280,6 +280,8 @@
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginEnd="@dimen/margin_15"
                     android:layout_marginStart="@dimen/margin_15"
+                    android:textSize="19sp"
+                    android:lineSpacingMultiplier="0.9"
                     android:layout_marginTop="@dimen/margin_5"
                     android:animateLayoutChanges="true"
                     android:maxLines="3"
