--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:background="?white"
+                android:layout_height="@dimen/height_150"
                 android:foreground="?selectableItemBackground"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_marginBottom="@dimen/margin_5">
@@ -10,11 +11,10 @@
     <!--TODO: Do we need an image placeholder for news?-->
     <ImageView
         android:id="@+id/image"
-        android:layout_width="@dimen/height_120"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@id/likes_and_comments"
+        android:layout_width="@dimen/height_145"
+        android:layout_height="@dimen/height_150"
         android:layout_alignParentStart="true"
-        tools:scaleType="centerCrop"
+        android:scaleType="centerCrop"
         tools:src="@drawable/news_holder_image" />
 
     <TextView
@@ -22,23 +22,21 @@
         android:lineSpacingMultiplier="0.8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/image"
-        android:background="?white"
         android:ellipsize="end"
         android:maxLines="3"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
         android:text="@string/demo_content_lorem_long"
         android:textColor="?black"
-        android:textSize="@dimen/font_size_16" />
+        android:textSize="20sp" />
 
     <RelativeLayout
         android:id="@+id/likes_and_comments"
         android:layout_width="match_parent"
         android:layout_toEndOf="@+id/image"
         android:layout_height="@dimen/height_35"
-        android:layout_below="@+id/text_content"
+        android:layout_alignBottom="@id/image"
         android:background="@color/white"
         android:paddingEnd="@dimen/margin_10"
         android:paddingBottom="@dimen/margin_5">
