update stats top padding

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -265,8 +265,8 @@
                     android:layout_below="@id/source"
                     android:layout_marginEnd="@dimen/margin_5"
                     android:lineSpacingMultiplier="0.7"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:layout_marginTop="@dimen/margin_5"
                     android:ellipsize="end"
                     android:text="@string/demo_content_lorem_medium"
                     android:textColor="@color/colorPrimaryVeryLight"
