--- a/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
@@ -1,10 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="base.app.fragment.instance.FantasyFragment">
+    android:paddingTop="80dp"
+    tools:context="base.app.fragment.instance.FantasyFragment"
+    tools:paddingTop="0dp">
 
     <WebView
         android:id="@+id/web_view"
@@ -13,8 +16,6 @@
         android:scrollbars="none"
         android:visibility="visible">
     </WebView>
-
-
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/pin_button"
