--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/appBackground"
-    tools:context="base.app.activity.LoungeActivity">
+    tools:context="base.app.activity.MainActivityTablet">
 
     <View
         android:layout_width="match_parent"
